--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
+body {
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+
+}
+
+h1 {
+    font-size: 3em;
+    font-weight: bold;
+}
+
 #navbar {
 
 }
@@ -15,5 +26,5 @@
 }
 
 #contact{
-    
+
 }
