--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Lato', sans-serif;
     font-size: 16px;
+    margin: 2em;
 
 }
 
@@ -9,10 +10,17 @@ h1 {
     font-weight: bold;
 }
 
+h2 {
+    font-size: 2em;
+    font-weight: bold;
+    padding-bottom: 1em;
+}
 .grid-container{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: auto;
+    column-gap: 1em;
+    row-gap: 2em;
     grid-template-areas: 'pageTitle pageTitle navbar'
                             'aboutMe aboutMe photoOfMe'
                             'proj proj proj'
@@ -26,11 +34,29 @@ h1 {
 
 #navbar {
     grid-area: navbar;
+   
 
+
+}
+
+#navbar li{
+    font-size: 2em;
+    display: inline-block;
+    
+}
+
+#navbar ul li:after{
+    content: ' /';
 }
 
 #about-me{
     grid-area: aboutMe;
+    font-size: 1.5em;
+    line-height: 1.5em;
+}
+
+#about-me article{
+    
 }
 
 #projects{
