some css changes

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,8 @@ h2 {
     padding-bottom: 1em;
 }
 .grid-container{
-    padding-top: 230px;
+    padding-left: 12em;
+    padding-top: 16em;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: auto;
@@ -32,8 +33,7 @@ h2 {
  header{
     width: 100%;
     position: fixed;
-    background-color: #fff;
-    opacity: 0.7;
+    background-color: rgba(255, 255, 255, 0.7);
     display: flex;
     align-items: center;
                         }
@@ -76,6 +76,7 @@ h2 {
     grid-area: aboutMe;
     font-size: 1.5em;
     line-height: 1.5em;
+  
 }
 
 #about-me article{
