--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/*general styles*/
+
 body {
     font-family: 'Lato', sans-serif;
     font-size: 16px;
@@ -10,21 +12,15 @@ h1 {
     font-weight: bold;
 }
 
-h2.section-title{
-    font-size: 2em;
-    font-weight: bold;
-    padding-bottom: 1em;
-}
+/*header*/
+
 .flex-container{
-    padding-left: 12em;
-    padding-top: 14em;
     display: flex;
     flex-direction: column;
-                        }
+}
 
  header{
     width: 100%;
-    position: fixed;
     background-color: rgba(255, 255, 255, 0.8);
     display: flex;
     align-items: center;
@@ -64,6 +60,27 @@ h2.section-title{
     content: ' /';
 }
 
+/*sections and articles*/
 
+h2.section-title{
+    font-size: 2em;
+    font-weight: bold;
+    padding-bottom: 1em;
+    padding-top: 2em;
+}
 
+#about-me{
+    padding-left: 12em;
+}
 
+#projects{
+    padding-left: 12em;
+}
+
+#skills{
+    padding-left: 12em;
+}
+
+#contact{
+    padding-left: 12em;
+}
